# Just_3_scales

./: CMakeLists.txt  EK_TM4C123GXL.ld  gcc.ld
src/drivers/: adc_potmeter.cpp  ssi_display.cpp  ssi_display.h
src/main/: commands.cpp  main.cpp  primary_activity.cpp  primary_activity.h  startup_gcc.c
src/utils/: ustdlib.cpp
